# game-of-life

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  cell.py  default.tmpl  gameoflife.py  grid.py  main.py  pattern.py  patterns.py  pygbag.ini  pyproject.toml  requirements.txt  run.py  selector.py  settings.py  setup.py  text.py
.github/workflows/: ci.yml  release.yml
data/text/: patterns.txt
gameoflife/: __init__.py  __main__.py  app.py  camera.py  controls.py  main.py  settings.py
gameoflife/board/: __init__.py  board.py  cell.py  grid.py
gameoflife/data/text/: patterns.txt
gameoflife/modal/: __init__.py  end.py  modal.py  overlay.py  pause.py  screen.py
gameoflife/pattern/: blueprint.py  menu.py  paste.py  select.py
gameoflife/util/: geometry.py  text.py
tests/: conftest.py  test_camera.py  test_main.py  test_settings.py
tests/board/: test_board.py  test_cell.py  test_grid.py
tests/modal/: test_overlay.py
tests/pattern/: test_blueprint.py  test_paste.py  test_select.py
tests/util/: test_geometry.py  test_text.py
