[project]
name = "game-of-life"
version = "0.1.0"
description = "Conway's game of life written in pygame"
authors = [
    { name = "Henrik Petersson", email = "44243358+hnrkcode@users.noreply.github.com" },
]
dependencies = ["pygame>=2.6.1"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]
lint = ["ruff>=0.15.8", "ty>=0.0.26"]

[tool.ruff]
line-length = 150
exclude = ["migrations"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["I001", "W292", "W293", "RUF022"]
ignore = ["D", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "I001", "SIM", "PT", "E", "N", "B", "RET", "W"]
"run.py" = ["W292"]
"gameoflife/**" = ["FBT", "PLR"]

[tool.ty.rules]

[tool.ty.src]
exclude = []
