[project]
name = "game-of-life"
version = "0.1.0"
description = "Conway's game of life written in pygame"
authors = [
    { name = "Henrik Petersson", email = "44243358+hnrkcode@users.noreply.github.com" },
]
dependencies = [
    "pygame-ce>=2.5.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]
lint = ["ruff>=0.15.8", "ty>=0.0.26"]

[tool.ruff]
line-length = 150
exclude = ["migrations"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["I001", "W292", "W293", "RUF022"]
ignore = ["D", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PT", "S101", "PLR2004", "ANN"]
"gameoflife/**" = ["FBT"]
"gameoflife/util/text.py" = ["PLR0913"]
"gameoflife/camera.py" = ["PLR0913"]
"gameoflife/main.py" = ["C901", "PLR0912", "PLR0915"]

[tool.ty.rules]

[tool.ty.src]
exclude = []
