[project]
name = "game-of-life"
version = "0.1.0"
description = "Conway's game of life written in pygame"
authors = [
    { name = "Henrik Petersson", email = "44243358+hnrkcode@users.noreply.github.com" },
]
dependencies = ["pygame-ce>=2.5.7"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = ["pygbag>=0.9.3"]
lint = ["ruff>=0.15.8", "ty>=0.0.26"]
test = ["pytest>=9.0.2", "pytest-cov>=7.1.0"]

[tool.ruff]
line-length = 150
exclude = ["migrations"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["I001", "W292", "W293", "RUF022"]
ignore = ["D", "COM812", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PT", "S101", "PLR2004", "ANN", "FBT003"]
"gameoflife/**" = ["FBT"]
"gameoflife/util/text.py" = ["PLR0913"]
"gameoflife/camera.py" = ["PLR0913"]
"gameoflife/app.py" = ["C901", "PLR0912", "PLR0915"]

[tool.ty.rules]

[tool.ty.src]
exclude = []

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
allow_shell_hooks = true
